--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="settings_nav_view_title">Settings</string>
     <string name="drawer_user_info_user_icon">User icon</string>
     <string name="search_label">Search</string>
+    <string name="username_edit_text_label">Username</string>
+    <string name="username_text_input_helper_text">Username can\'t be empty</string>
+    <string name="password_text_input_helper_text">Password can\'t be empty</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
