--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,9 @@
     <string name="username_edit_text_label">Username</string>
     <string name="username_text_input_helper_text">Username can\'t be empty</string>
     <string name="password_text_input_helper_text">Password can\'t be empty</string>
+    <string name="confirm_password_text_input_helper_text">Confirm password can\'t be empty</string>
+    <string name="email_text_input_helper_text">Email can\'t be empty</string>
+    <string name="confirm_password_not_match">Password not match</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
