--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,14 @@
     <string name="confirm_password_text_input_helper_text">Confirm password can\'t be empty</string>
     <string name="email_text_input_helper_text">Email can\'t be empty</string>
     <string name="confirm_password_not_match">Password not match</string>
+    <string name="load_error">Load error</string>
+    <string name="logout_message">Do you really want to logout?</string>
+    <string name="cancel_label">Cancel</string>
+    <string name="yes_label">Yes</string>
+    <string name="delete_message">Do you really want to delete this item?</string>
+    <string name="from_label">From</string>
+    <string name="to_label">To</string>
+    <string name="delete_item">Delete item</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
