--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,11 @@
     <string name="from_label">From</string>
     <string name="to_label">To</string>
     <string name="delete_item">Delete item</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="change_name">Change name</string>
+    <string name="move_to_bin">Move to bin</string>
+    <string name="move_to_bin_warning">Do you really want to move this item to bin?</string>
+    <string name="change_email">Change email</string>
+    <string name="change_password">Change password</string>
+    <string name="logout">Logout</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
